Bug 1013211 - Use the final resource URI after redirects etc as the source URI when dragging an image.  r=roc